fix makefile and app proto
fix gitignore

wip

wip

fix migration

wip: entity struct

wip: start do repo

wip card repo

wip: test repo fix migration

wip: char repo

wip: переосмысление репозитория

wip: Работа через тестирование

wip: brands

wip: repo and tests

wip: barcode repo

wip: file, price repo

wip warehouse repo

wip order repo && warehouse

wip stock repo

wip: sale

wip: return to card repo

wip: wb webapi

wip: broker and handler

wip: брокер и петля

wip: удалил лишние данные из проекта
