# internal/controller/gateway.go
@@ -6,20 +6,22 @@ import (
 	"fmt"
 	"time"
 
+	"github.com/gofiber/fiber/v2"
 	"github.com/grpc-ecosystem/grpc-gateway/v2/runtime"
+	"github.com/valyala/fasthttp/reuseport"
+	"golang.org/x/sync/errgroup"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/credentials/insecure"
 	"google.golang.org/grpc/reflection"
-	"github.com/gofiber/fiber/v2"
-	"github.com/valyala/fasthttp/reuseport"
 
 	"github.com/efremovich/data-receiver/pkg/alogger"
+	"github.com/efremovich/data-receiver/pkg/broker/brokerconsumer"
 
-	"github.com/efremovich/data-receiver/config"
+	conf "github.com/efremovich/data-receiver/config"
 	"github.com/efremovich/data-receiver/internal/controller/middleware"
 	"github.com/efremovich/data-receiver/internal/usecases"
+	desc "github.com/efremovich/data-receiver/pkg/data-receiver-service"
 	"github.com/efremovich/data-receiver/pkg/metrics"
-	desc "github.com/efremovich/data-receiver/pkg/package-receiver-service"
 )
 
 type GrpcGatewayServer interface {
@@ -30,25 +32,26 @@ type GrpcGatewayServer interface {
 type grpcGatewayServerImpl struct {
 	httpServer *fiber.App
 	grpcServer *grpc.Server
-
-	cfgGateway config.Gateway
+	cfg        conf.Config
 
 	metricsCollector metrics.Collector
 
-	packageReceiver usecases.ReceiverCoreService
+	core usecases.ReceiverCoreService
 
-	desc.UnimplementedPackageReceiverServer
+	brokerConsumer brokerconsumer.BrokerConsumer
+
+	desc.UnimplementedCardReceiverServer
 }
 
-func NewGatewayServer(cfg config.Gateway, packageReceiver usecases.ReceiverCoreService, metricsCollector metrics.Collector) (GrpcGatewayServer, error) {
+func NewGatewayServer(ctx context.Context, cfg conf.Config, packageReceiver usecases.ReceiverCoreService, metricsCollector metrics.Collector, broker brokerconsumer.BrokerConsumer) (GrpcGatewayServer, error) {
 	gwmux := runtime.NewServeMux()
 
 	opts := []grpc.DialOption{grpc.WithTransportCredentials(insecure.NewCredentials())}
 
-	err := desc.RegisterPackageReceiverHandlerFromEndpoint(
+	err := desc.RegisterCardReceiverHandlerFromEndpoint(
 		context.Background(),
 		gwmux,
-		cfg.GRPC.Host+":"+cfg.GRPC.Port,
+		cfg.Gateway.GRPC.Host+":"+cfg.Gateway.GRPC.Port,
 		opts,
 	)
 	if err != nil {
@@ -56,17 +59,18 @@ func NewGatewayServer(cfg config.Gateway, packageReceiver usecases.ReceiverCoreS
 	}
 
 	gateway := &grpcGatewayServerImpl{
-		cfgGateway:       cfg,
-		packageReceiver:  packageReceiver,
+		cfg:              cfg,
+		core:             packageReceiver,
 		metricsCollector: metricsCollector,
+		brokerConsumer:   broker,
 	}
 
-	router := newRouter(gwmux, cfg, gateway.PackageReceiveV1Handler, metricsCollector)
+	router := newRouter(gwmux, cfg.Gateway, gateway.CardReceiveV1Handler, metricsCollector)
 
 	interceptors := grpc.ChainUnaryInterceptor(
 		alogger.UnaryTraceIdInterceptor,
 		middleware.MetricInterceptor(metricsCollector),
-		middleware.AuthInterceptor(cfg.AuthToken),
+		middleware.AuthInterceptor(cfg.Gateway.AuthToken),
 	)
 
 	grpcServer := grpc.NewServer(
@@ -78,52 +82,65 @@ func NewGatewayServer(cfg config.Gateway, packageReceiver usecases.ReceiverCoreS
 	gateway.httpServer = router
 	gateway.grpcServer = grpcServer
 
-	desc.RegisterPackageReceiverServer(grpcServer, gateway)
+	desc.RegisterCardReceiverServer(grpcServer, gateway)
 
 	return gateway, nil
 }
 
 func (gw *grpcGatewayServerImpl) Start(ctx context.Context) error {
-	errChanCapacity := 2
-	errChan := make(chan error, errChanCapacity)
+	// Запуск брокера потребителя.
+	err := gw.makeBrokerSubscribers(ctx)
+	if err != nil {
+		return fmt.Errorf("ошибка при запуске брокера потребителя для создания пакетов: %w", err)
+	}
 
-	go func() {
-		adr := gw.cfgGateway.GRPC.Host + ":" + gw.cfgGateway.GRPC.Port
+	g, ctx := errgroup.WithContext(ctx)
+
+	// GRPC
+	g.Go(func() error {
+		adr := gw.cfg.Gateway.GRPC.Host + ":" + gw.cfg.Gateway.GRPC.Port
 
 		grpcListener, err := reuseport.Listen("tcp4", adr)
 		if err != nil {
-			errChan <- fmt.Errorf("ошибка при запуске GRPC сервера: %w", err)
-			return
+			return fmt.Errorf("ошибка при запуске GRPC сервера: %w", err)
 		}
-
 		alogger.InfoFromCtx(ctx, "запуск GRPC сервера на "+adr, nil, nil, false)
 		defer alogger.InfoFromCtx(ctx, "GRPC сервер остановлен", nil, nil, false)
 
 		err = gw.grpcServer.Serve(grpcListener)
 		if err != nil {
-			errChan <- fmt.Errorf("ошибка при запуске GRPC сервера: %w", err)
+			return fmt.Errorf("ошибка при запуске GRPC сервера: %w", err)
 		}
-	}()
+		return nil
+	})
 
-	go func() {
-		adr := gw.cfgGateway.HTTP.Host + ":" + gw.cfgGateway.HTTP.Port
+	// REST
+	g.Go(func() error {
+		adr := gw.cfg.Gateway.HTTP.Host + ":" + gw.cfg.Gateway.HTTP.Port
 
 		alogger.InfoFromCtx(ctx, "запуск HTTP сервера на "+adr, nil, nil, false)
 		defer alogger.InfoFromCtx(ctx, "HTTP сервер остановлен", nil, nil, false)
 
 		err := gw.httpServer.Listen(adr)
 		if err != nil {
-			errChan <- fmt.Errorf("ошибка при запуске http сервера: %w", err)
+			return fmt.Errorf("ошибка при запуске http сервера: %w", err)
 		}
-	}()
-
-	select {
-	case <-ctx.Done():
-		gw.gracefulStop()
 		return nil
-	case err := <-errChan:
+	})
+
+	g.Go(func() error {
+		<-ctx.Done()
+		gw.grpcServer.GracefulStop()
+		err := gw.httpServer.Shutdown()
+
 		return err
+	})
+
+	if err := g.Wait(); err != nil {
+		return fmt.Errorf("ошибка: %w", err)
 	}
+
+	return nil
 }
 
 func (gw *grpcGatewayServerImpl) gracefulStop() {
